<?xml version="1.0"?>
<package>
  <name>wandrr</name>
  <version>0.0.0</version>
  <description>san dimas high school football rules</description>
  <maintainer email="morgan@osrfoundation.org">Morgan Quigley</maintainer>
  <license>BSD</license>
  <author email="morgan@osrfoundation.org">Morgan Quigley</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
